--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           cat > Gemfile << EOM
           source "https://rubygems.pkg.github.com/github-packages-examples" do
-            gem "rubygems-publish"
+            gem "rubygems-publish", require: "rubygems-publish"
           end
           EOM
 
