--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Add Gemfile
         run: |
           cat > Gemfile << EOM
-          source "https://rubygems.pkg.github.com/github-packages-examples" do
+          source "https://rubygems.pkg.github.com/jcansdale-test" do
             gem "rubygems-publish", require: "rubygems-publish"
           end
           EOM
@@ -28,7 +28,7 @@ jobs:
           EOM
 
       - name: Authenticate using Bundler
-        run: bundle config https://rubygems.pkg.github.com/github-packages-examples token:${{ github.token }}
+        run: bundle config https://rubygems.pkg.github.com/jcansdale-test token:${{ github.token }}
 
       - name: Install using Bundler
         run: bundle install
@@ -55,7 +55,7 @@ jobs:
           :bulk_threshold: 1000
           :sources:
           - https://rubygems.org/
-          - https://token:${{ github.token }}@rubygems.pkg.github.com/github-packages-examples/
+          - https://token:${{ github.token }}@rubygems.pkg.github.com/jcansdale-test/
           :update_sources: true
           :verbose: true  
           EOM
