--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -7,10 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Ruby 2.6
+      - name: Setup Ruby 2.5.5
         uses: actions/setup-ruby@v1
         with:
-          version: 2.6.x
+          version: 2.5.5
 
       - name: Add Gemfile
         run: |
