--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -7,10 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Ruby 2.5.5
+      - name: Setup Ruby 2.7.x
         uses: actions/setup-ruby@v1
         with:
-          version: 2.5.5
+          version: 2.7.x
 
       - run: bundler --version
 
