--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           cat > Gemfile << EOM
           source "https://rubygems.pkg.github.com/jcansdale-test" do
-            gem "rubygems-publish"
+            gem "rubygems-publish-missing"
           end
           EOM
       - name: Add main.rb
